--- a/src/app/dashboard/vehicles/vehicles.component.html
+++ b/src/app/dashboard/vehicles/vehicles.component.html
@@ -23,14 +23,40 @@
         </h2>
       </div>
     </div>
-    <div *ngIf="vehicle.rentedBy" fxLayout="row" fxLayoutAlign="start start">
+    <div *ngIf="vehicle.rentedBy && user.user._id !== vehicle.rentedBy" fxLayout="row" fxLayoutAlign="start start">
       <div fxFlex="5" fxFlex.xs="10" fxFlex.sm="10">
         <mat-icon style="vertical-align: -webkit-baseline-middle;" class="unavailable">new_releases</mat-icon>
       </div>
       <div fxFlex="95" fxFlex.xs="90" fxFlex.sm="90">
-        <h2>
-          INDISPONÍVEL
-        </h2>
+        <div fxLayout="row">
+          <div fxFlex>
+            <h2>
+              INDISPONÍVEL
+            </h2>
+          </div>
+          <div fxFlexAlign="center end" fxFlex>
+            <h4>A reserva expira em {{calculateDays(vehicle.rentDate)}} dias</h4>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div *ngIf="vehicle.rentedBy && user.user._id === vehicle.rentedBy" fxLayout="row" fxLayoutAlign="start start">
+      <div fxFlex="5" fxFlex.xs="10" fxFlex.sm="10">
+        <mat-icon style="vertical-align: -webkit-baseline-middle;" class="available">verified</mat-icon>
+      </div>
+      <div fxFlex="95" fxFlex.xs="90" fxFlex.sm="90">
+        <div fxLayout="row">
+          <div fxFlex>
+            <h2>
+              VOCÊ JÁ RESERVOU
+            </h2>
+          </div>
+          <div fxFlexAlign="center end" fxFlex>
+            <h4>A reserva expira em {{calculateDays(vehicle.rentDate)}} dias</h4>
+          </div>
+        </div>
+
       </div>
     </div>
 
@@ -43,16 +69,22 @@
       <div fxFlex="60">
         <div fxLayout="row" fxLayout.sm="column" fxLayout.xs="column">
           <div fxFlex="33" fxFlex.sm="100" fxFlex.xs="100">
-            <mat-card-title>Valor do aluguel</mat-card-title>
-            <h2> {{vehicle.price | currency: 'BRL'}}/dia</h2>
+            <mat-card-title style="color: gray;">
+              <mat-icon style="vertical-align: text-bottom;">attach_money</mat-icon> Valor do aluguel
+            </mat-card-title>
+            <h3> {{vehicle.price | currency: 'BRL'}}/dia</h3>
           </div>
           <div fxFlex="33" fxFlex.sm="100" fxFlex.xs="100">
-            <mat-card-title>Ano do veículo</mat-card-title>
-            <h2> {{vehicle.year}}</h2>
+            <mat-card-title style="color: gray;">
+              <mat-icon style="vertical-align: text-bottom;">toys</mat-icon> Ano do veículo
+            </mat-card-title>
+            <h3> {{vehicle.year}}</h3>
           </div>
           <div fxFlex="33" fxFlex.sm="100" fxFlex.xs="100">
-            <mat-card-title>Quilometragem</mat-card-title>
-            <h2> {{vehicle.kilometers}}km</h2>
+            <mat-card-title style="color: gray;">
+              <mat-icon style="vertical-align:text-bottom;">edit_road</mat-icon> Quilometragem
+            </mat-card-title>
+            <h3> {{vehicle.kilometers}}km</h3>
           </div>
         </div>
 
